--- a/AcousticFWI/VTI.ipynb
+++ b/AcousticFWI/VTI.ipynb
@@ -89,28 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "as_base_exp() missing 1 required positional argument: 'self'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-10825148d16b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mA\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mepsilon\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mB\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdelta\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mAp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[0mBp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mB\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mBr\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mB\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\mathias\\Anaconda3\\lib\\site-packages\\sympy\\core\\decorators.py\u001b[0m in \u001b[0;36m__sympifyit_wrapper\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m     75\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'_op_priority'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     76\u001b[0m                     \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msympify\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstrict\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 77\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     78\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mSympifyError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     79\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mretval\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\mathias\\Anaconda3\\lib\\site-packages\\sympy\\core\\decorators.py\u001b[0m in \u001b[0;36mbinary_op_wrapper\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m    116\u001b[0m                     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    117\u001b[0m                         \u001b[1;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 118\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mother\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    119\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mbinary_op_wrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    120\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mpriority_decorator\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\mathias\\Anaconda3\\lib\\site-packages\\sympy\\core\\expr.py\u001b[0m in \u001b[0;36m__mul__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m    139\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mcall_highest_priority\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'__rmul__'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    140\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__mul__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mother\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 141\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mMul\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mother\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    142\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    143\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0m_sympifyit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'other'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mNotImplemented\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\mathias\\Anaconda3\\lib\\site-packages\\sympy\\core\\operations.py\u001b[0m in \u001b[0;36m__new__\u001b[1;34m(cls, *args, **options)\u001b[0m\n\u001b[0;32m     39\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0margs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 41\u001b[1;33m         \u001b[0mc_part\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnc_part\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morder_symbols\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcls\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     42\u001b[0m         \u001b[0mis_commutative\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mnc_part\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m         \u001b[0mobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcls\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_from_args\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc_part\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mnc_part\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mis_commutative\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\mathias\\Anaconda3\\lib\\site-packages\\sympy\\core\\mul.py\u001b[0m in \u001b[0;36mflatten\u001b[1;34m(cls, seq)\u001b[0m\n\u001b[0;32m    288\u001b[0m                 \u001b[1;31m#      e\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    289\u001b[0m                 \u001b[1;31m# o = b\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 290\u001b[1;33m                 \u001b[0mb\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0me\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mo\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mas_base_exp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    291\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    292\u001b[0m                 \u001b[1;31m#  y\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: as_base_exp() missing 1 required positional argument: 'self'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "p=Function('p')\n",
     "r=Function('r')\n",
@@ -175,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -186,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -195,47 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAB30AAAAvBAMAAAAV081pAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAzRAiu5mrdu/dZlRE\niTIDEAIKAAATA0lEQVR4Ae1cfYxkx1GvmdnP+dgPQz4so/hZRD4TiG4kjDDnwA3YcQyI3Jo4TiQC\nWZvo4gSRG4XY5wSZWxIbg5TgDQZsiKwbx4pjkGIPSRAYS/FKjpI4ktl1yOZwJOsGJEKURLr15ZBt\n7Nymqruru97rfu/N7NtZ7R+vpZv+qKpfVf3q9cybN9sHsJN2wU6MSpuSgZKB/cDA5Wf3QxRlDCUD\nJQM7YOD1N5T7dwe0lSYlA/uDgely/+6PQpRRlAzsgIFy/+6AtNKkZGCfMFDu331SiDKMkoEdMFDu\n3x2QVpqUDOwTBsr9u08KUYZRMrADBnZz/7au/20Tweabox3E4kyK2jukzNG43ThCMsPYZWERr0Vs\nM9IYA9FFIi1im57leFDT/SnJbu7f/4AbtbdWe2ohx2+muKh9JrgTjt2NJcT53INREa9FbNNTGwfR\nRSItYpue5XhQ0/0pSZH9+4ME9j1wpq2WZttzP0zIRpoWtR/S2djdWEKGDGh31Ip4LWKbHv04iC4S\naRHb9CyLoE6nw2ZLCuzfuU4C+uNweE0tzazVXknIRpoWtR/S2djdWEKGDGh31Ip4LWKbHv04iC4S\naRHb9CyLoDaX03EzJQX2byXykJ/gpUbBPwspau9FFl4YuxtLSNj/mFaLeC1im57OOIguEmkR2/Qs\nC6B+Ox01SzJ580vvz5Jnyd7hC+/lpdkuj7D/nhjHh/VBfG5nMXu16oMI47metUwMhFJCQtOkGx9H\n2PtCi/iIHSUGlhCz7mchTH1hAk1MhZlYNUPrdQchD2Pre+QVQRcvqd4RPUqSsE+zTAtrZ9wpzmaj\nGF97MKmJj9jqtavksbXEfjdpUNt87v3UdWgSbh9ILr/+L9SKsqfR9JFzR4+eXAiCOOPLkzBu7pTM\n2i9c/1YA6eah7T45evE3AQI4zj4gZDdTAx6ZXhIi8ANUONOAMIEqps7MLNbefvXADF0ZRglZGwdt\nDVsGPrNzdMXUbD0pyeHh9jRLF7CpnltIjLywtDzIHUAeGhBn03brJHyNbeqiRRcV5f4z7Kyups8M\ngJ5DVyJeTvQ/04ZKYgngVbSi7ZVsHhHqHahEahZ7ccYXxNbdJOChugyn1+Jujm2gxXfoG3sAJ99J\n9R4ADDLeJCEOvxLFtWhmTSsRTYdpIY+XQoufOdgyhPJR+CEA7Thsq4qSH1mAbm3k6lmJcGU4uFCQ\nY81Sx0qvunpuLkehsLQ8zF02GhjOalvSx16MZ/rCyzxNmhvNgV57Gv4d4JIOvvfcCXC7XvNfn8C3\nnQ2z/NMsfpkGyl6vrHcRZSkIYo3tgEG4lx7M2lQEMysAwk3t4WWUPbQlojG61FlsOxBCNWygJedY\nbRupIMThWzUJwaZBoVQEYJJCHm8C+HOt7cowVMgxFym2ii2lyCHErHgSoFuLXD1VthbO0sUIst/z\nLJ1zVT019fOVYTkLHKVwB+DQAvkyZ38fw9qDyZlIOFmnyX89/kW9NnfR478GcCHJjwF8jPpQuw53\n5ooR/Ivpm3RXru31yukBanWDINZ4hneNAbGd9GAWZ1Zh6jxIN/XLF/Aj/rIOQAgn38kkml9m0Btd\nMxCEOPxgFmwaFBo00zFJIY/4vePYQOnZMgTzUSoSwGDrLmyr2NIKHELMiicBupVI1JMuBgdn6WIE\n2csgWXGcWQrfqnpq7ucrwxIm4vJP8u7QOA1hx5xdL9b2ZPiw9PIsTe7e3tZrM9vbW+Z27vSguSoV\n5fh+nFxkFpinFmkreyO4GGAD2mEQNn7K6Hqd9GCElbO0f6WbyckVgDcdxp0XxMl1MruBt0h9DW8L\nJAhx+MEs2DQojGfEJIU8Xhzx/rVlCOdDkBIg5iJsq9jSehxCzIonAbqVyNVTJengLF2MIHsZJCuO\nM0vhW1VPzf18ZVjCRFz+Sd4dGqch7Jiz28TangzxjcO1V/3bh9pmduojAzU6vEDdu9daS9gduPVN\nt3fV8hvfAbWP0qj5nnPvBdhUiwDMU+V3PnuVWWodfwRH52C6p5+MVY///ldPaZkB2YTmN3/l+E0K\nJNeDQcVu9iwINzA5vQXQfXSgg/FwpBMXQnWzC1dEhPmVI9d07ZM7WyBBiMMnKjwIXHz6qv+9NYoL\nwfKEySsi0JUhKewR4GRkVR0vnr9kyJSDauzG2bJEsMV18mhKFpRtga8Hm6Qgn+nKDZIVEVVm+a2f\nO9VNVD+lMDYcm2XA1iq56pl8C6E6NE7DFtdtAvchbaMY7+BqAV99vj21rOeVwQRtWIDTPXo9MpjA\nvrpRv3d2geaw8a9A+wUbfZGAB9TQXppw8CfgqFl6HbwZL4rnj55sAxDIG+Efup/UMgPyALSmPgXf\nhN8YxoNBxW59Q7qBQ43z0IjwRj+MI5yIEFqNFTihIfEbDNR1csAFEoQI/HgWBgJNN97Xb3XiQsET\nKCLIF2+ekEek6kdgVS0v+SHrJPCV3ThbFomi8PWcW1C2tdeDTVKQz3S50ubwmshy4qKJlUTVUgA4\nHJdlwJaVRPVMvkVQBRrnG9gEZwbsfY/6Vws/uAMmOnp+GOYiNaJtB/AizPbxEyRqnW2oea1/HavS\nFwl4TOmKS3MA5o0Bn8j9N1qeV8+oCeQbcDr6glJnkMfgysoyPAqfGsaDcYTdXwM8Yd0APFh7GX4W\n7kBBEEc4ESFcidGbQOlGpLGq4blAghCBH8/CQDRWa/1XQ30rLuQUEVYTQfi8f0Me8bai41QtL/kh\n68CFG2fLIsEWX8+5BWVbvh5ckoJ8psuVNofXeJbfn13GJ6axqkEKAIdjyQzZspKonsm3CKpAM/mK\n4tpNcHgNtvesUaJ/g/8u+TtqrwOMYqarsz9455oebFPXeAFmcF6FSoemNLoL5rXq7AbOz6jV2KV5\nl16qvvguHFS2YBLmFEgEP2mUGeQMRPhs73T08VwP1Qsp0E8OCGCyA4A7wLgBWIIXoFt7ASVBHOEE\nXAgR5ksm2OgbzNyWGtrPX0GIwCcqPIi5rSo+DW+djQs5RYTVRBC+uZiCHgHwCYhVtbz4/gjIhix4\n8W2tULBlQsgpKF8X6IqvB5ekIJ/3r0dKLEicsGIiy4NrKItVDUKFsYlIhgK2HLaonsk3hGqv/hxU\ngWbSEMW1m+Bwn3LewyY/fzGKwwPtu3nknB7cR93sqtp6+Axd71m8/zkL5lZBEaj27zOLi/ctLqpf\nBe+H2nltD1/e7qBdB7f8AQNiNowFQWP82nAtVTDHg4FU3a34Ktzg/rqz0a6T1yBOzAnvWXI8pwOt\n0s+uav+2Fhcv/NPFxSWcC0IEPm1RSEKgKXIysZIQOp40EeBICnqE6WXEVpxhL3hJ+kOhAyBVbiFb\nLWO2XAjD022vB5ekgRN0eaSgXxekVIxnSV8kElULFUZnoV9tliFbo8jVE/kGyj0sKqOJNFxx7SbA\nz9+9bXL/YhT/ie/02Gr96om2CuQYvZ4YqPtn/JwdaDl9VN+m5LCOO9M+quP39VegtYLL2K6EA3iI\naZ32/Tc0CG4YLWKQpwCeher/0R1UvgfSodZYgp/Ha4PdQK0Hi2+AqRUUBXFiTlwI18E0meB7yRZm\n1lxVY/s54QiR+HSLDEkING2twsGlhNDxpIkgfENS0CP8M9TaTtXxkvSHODEAAqYWstUSyZYJYWi6\n3fVgkxRw9mM1L0irGM+Svkgkqoaf7qHC6ExkliFboyWqx/kWQBVonIYrrt0E5ugeRjCGw9Kcvezf\nIyaPAnyiHtFCZQXmtWB97Zf/ZO4v9aOnRnQCppUcJpbhGq3wDHzJe35V34KZjU8r+WsBtvAp2ACv\n+GWY6AF8Hp97fVCbGpAH6E956h+lJxj5HrQlwP8A/JFwA/U2vLMLMx2UB3GEExnCNZQJtdZCY+A9\nv3KESPxEFhoCn1/hn/s8HCWEjidNBLkyF1PQ49wSTLedKvOSHzIBUwvYagF+N7dF4RCGpttdDzZJ\nAcfXsyhtNq+JLD9BEcarhldXqDAmFZFlyNZoierx/i2AKtA4X1dcuwnwRlK3cRyWNtCx7jYxuxHg\nlZaaTwzguBZM/9VS66E2Xt/L+CnaPwKHoPo8SiY7zf/XoxvwzzLg7VqZrwv8e8v5tQ219laYRvlJ\nHH9tQCDNlye28LPy4AKDKONz8N0BfGsYD8ZR7f7nblgVbmBW3SWcQV8hnJgTGcL1sK6DmVw+gFkt\naXgukCNE4ieyUBBkOt/BN7qEUPGkktVEEL65mIIef+m5zfeBU2Ve8kPWgUPAliWSLRNCfkGNsbse\nOEkQcIau/CCZ13iW+pRqvPr4GGC9p680WRjOxTIUtDVaonq8f8PlHgpVoHEagU3wMGPZw9Lf4xXu\nvYXs8x2Bc0OPIBT9o7YeqU694Fvg5oYa1Y5/tm/Wv/NbH16Dgbq1vPT4gW/31E93UP3DW/C2+GSE\nhwVoo/+UUTY8TfSg9bt66Rc/8sdQvXH76NFfx23fXIXqez94+z/iN0v6Ay0NgsbNV069Td2E53sw\njir4kG9VuJm6+17cF1+8+2+jMI50IkO49NS72yqY2ltw61fWNDwXyBEi8RNZKAgyXX/6lnYwRZUs\nEaGbISno8eLt7ZfAqlpe8kM22AFblgi2+C1kaLrd9cBJ0r0U19jQlR8k85rIcpVCfApAhAOKVbq+\nYjRxLo6hkK3RctXjfDUqlWN0VIHGaQQ2AT591Ac7+LB0rWOiyTjCMzUwOrarH3uZxifu6IMFsEIg\nfbaZWXPrKaOJfh0N7rHSZpuGePMPeoRsrBihuTTNzO8cyJNKSCBojF+qsM0qXBpleCBxTgvhBJyA\nDoG+QOkRwBUGmQuU4iiZBUGg6bNKPSmkFBlf40mSsj0meckI2QvVs5UaMoTR6E4mSagJunbGa7Jq\n9Hybry9bGJmDGHu2QqaGLt9QuZPaZp6K6vL1NsFryFY9wgV9WLoS0Qq1ebwQ6h2oRDhONJQk2tSP\ncGHu2Bp+pkTgNdI3NpMbnjS5MLH8T7j0Gbtcx9GNgN/ngUbUWl3dw9dNn9Y5kB6qaBA0xi9V2Orq\nVY2s0PNA4pwWwgk4gR6+iy2o56M4Uu2U6Zs9Mwh3sSwMBJrqssWEJsU4nCQp22OSl4yQvUg9W6kh\nQ9BlTCmoNFLjZJK0mKCrtyNe41XTrHL1gWlSIfgvcVtfztdlSrkDBrSUisr5+pxV6bZSn6qBWbUp\nbqcF1dZxXg0f4XFKrHzoz3BUP4YvvkyvmfW5FTZJ7Se36SeWiTYrvAEH98Jb8JVG1C7RXf6rBan2\nUFmDoPHBvjK9igEKeCCIAE7ACYUw250gVnFErbqg+7zXWBYGYgGq6pbH8eRSZHwfN8djkpdRQk7a\n+s7tygh0J5O0GG4wSpDOKlE1zSpfXzk0JWwlaHw8Yrlj11EcSc38TVBfRgH+rERtU71+TL3Sy+kB\nXmHhIzyXWSUePPirOPr0HfjiAFimz9mwzR+45ZTR3H20vWodFvdw8NVbBvhKI2o2UT1Nf7UgddLR\nIFdB4+RrlMnlbNizQhpRG9oDKQdwAk4ohObx38NXFQz2dl/iOKvFstAQaPrY8/hWIHhyKTK+j5nt\n0eNlhJA9W9+5XenhaMiCJpO0GG4wQpDOCEexqmlWe0Yhm6akrTEKdCOWOxZRAM7nbHaAavqbi/70\nbq5au4sB0o7wVGiDxdrSO/FKevIFvEIdgFMgfba5xC1njw6livG3m2GbDyKM8bl0ShNKKRpy2ccR\n9r7Qmj5oRzkDPwth6gvT0YRZuhL99pzWcgEybNMw8Q0tt6CjJAm5QapIMiLNBciwTc9yd1EVZ58j\nb/qciD4s3VrChfQjPOZAhdKKBbp0As+s018jkcg7F0KLbNMgD2UrGSgZKMyAvjFT50TMYemJHoKm\nH+Fxh1/ivmu9Jwbw+akt/XcX3rmQ+gK+x+I/1R6Pm5azkoGSgZ0xMBmRHW69q/nw+2wf74PTj/DY\nwy8Jf/X24X61P9PBJzQI4J0LaaziQ3/8V7aSgZKB3WYAf6K6izHp59mMIzzRjDo/M7eF+uJ4Bh72\nme9OA/1nFATgnQshfWXDbsq+ZKBkYJcY4HMiBKf+vEIdtpjv4J/9e0d49IEKby9OwszSF+DRgQFI\nHl4p9+8ulaqEKRlIMiAOdujb36wjPPpAhfeQ+RBULujBzQhN98+hwzLhB9PJWMp5yUDJwGgM1MU5\nEaDnV6/NOMJjD7/EfTwIk3gLTj//EoB3LiT2/CpuWc5KBkoGijAgDnbgrzzLfKTkJGL6R3js4Ze4\nx1WYPg9z+PNv8jyM0+ezNnHDclYyUDJQiAH8xOSDHfrPL7KO8NjDLzGXN7/UbXQb1750kwLwzoXQ\nYRn1L2ZUTkoGSgZ2mwF3nMUgu4Un1QodqLgiw2uafpZNBlwpKhkoGRieAXecxdi4hZ4953EqAy9N\nP8smA64UlQyUDAzPgPen23ZBnPNYyMBL0c890pEBWYpKBkoGhmOg1kno2QV3zsNu0YSqmqboZ9qE\ncMq1koGSgdEZ8E56eAs55zvC+rmHL0aPtLQoGSgZ+DERH992UVzgWAAAAABJRU5ErkJggg==\n",
-      "text/latex": [
-       "$$\\frac{1}{h^{2} \\left(s E{\\left (x,y \\right )} - M{\\left (x,y \\right )}\\right)} \\left(- h^{2} s^{2} Q{\\left (x,y,t \\right )} + h^{2} s E{\\left (x,y \\right )} p{\\left (x,y,t \\right )} - 2 h^{2} M{\\left (x,y \\right )} p{\\left (x,y,t \\right )} + h^{2} M{\\left (x,y \\right )} p{\\left (x,y,s + t \\right )} + 2 s^{2} p{\\left (x,y,t \\right )} - s^{2} p{\\left (- h + x,y,t \\right )} - s^{2} p{\\left (h + x,y,t \\right )} + 2 s^{2} r{\\left (x,y,t \\right )} - s^{2} r{\\left (x,- h + y,t \\right )} - s^{2} r{\\left (x,h + y,t \\right )}\\right)$$"
-      ],
-      "text/plain": [
-       "   2  2               2                           2                       2   \n",
-       "- h ⋅s ⋅Q(x, y, t) + h ⋅s⋅E(x, y)⋅p(x, y, t) - 2⋅h ⋅M(x, y)⋅p(x, y, t) + h ⋅M(\n",
-       "──────────────────────────────────────────────────────────────────────────────\n",
-       "                                                                              \n",
-       "                                                                              \n",
-       "\n",
-       "                          2               2                    2              \n",
-       "x, y)⋅p(x, y, s + t) + 2⋅s ⋅p(x, y, t) - s ⋅p(-h + x, y, t) - s ⋅p(h + x, y, t\n",
-       "──────────────────────────────────────────────────────────────────────────────\n",
-       "                   2                                                          \n",
-       "                  h ⋅(s⋅E(x, y) - M(x, y))                                    \n",
-       "\n",
-       "       2               2                    2               \n",
-       ") + 2⋅s ⋅r(x, y, t) - s ⋅r(x, -h + y, t) - s ⋅r(x, h + y, t)\n",
-       "────────────────────────────────────────────────────────────\n",
-       "                                                            \n",
-       "                                                            "
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -290,9 +242,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -311,14 +263,18 @@
     "# Smooth velocity\n",
     "v0=smooth10(vel,nx,ny)\n",
     "m0=v0**-2\n",
-    "eps=np.ones((nx,ny)) -.8\n",
+    "eps=(np.ones((nx,ny)) -.8)\n",
+    "eps[1:30,:]=0;\n",
+    "eps=smooth10(eps,nx,ny);\n",
     "delt=np.ones((nx,ny)) -.9\n",
+    "delt[1:30,:]=0;\n",
+    "delt=smooth10(delt,nx,ny);\n",
     "dm=m0-mt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -533,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -544,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -555,7 +511,7 @@
     "plts = []             # get ready to populate this list the Line artists to be plotted\n",
     "plt.hold(\"off\")\n",
     "for i in range(nt):\n",
-    "    r = plt.imshow(u01[i,:,:],vmin=-10,vmax=10)   # this is how you'd plot a single line...\n",
+    "    r = plt.imshow(u1[i,:,:],vmin=-10,vmax=10)   # this is how you'd plot a single line...\n",
     "    plts.append( [r] )  \n",
     "ani = animation.ArtistAnimation(fig, plts, interval=50,  repeat = False)   # run the animation\n",
     "plt.show()"
