--- a/AcousticFWI/MultiOrder_2d-3d.ipynb
+++ b/AcousticFWI/MultiOrder_2d-3d.ipynb
@@ -32,7 +32,7 @@
    },
    "outputs": [],
    "source": [
-    "# Choose dimension (2 or )\n",
+    "# Choose dimension (2 or 3)\n",
     "dim = 2\n",
     "# Choose order\n",
     "time_order = 6\n",
@@ -174,7 +174,7 @@
     "else:\n",
     "    dtt=as_finite_diff(p(x,y,z,t).diff(t,t),indt)\n",
     "    dxx=as_finite_diff(p(x,y,z,t).diff(x,x), indx) \n",
-    "    dyy=as_finite_diff(p(x,y,z,t).diff(x,x), indx) \n",
+    "    dyy=as_finite_diff(p(x,y,z,t).diff(y,y), indy) \n",
     "    dzz=as_finite_diff(p(x,y,z,t).diff(z,z), indz)\n",
     "    dt=as_finite_diff(p(x,y,z,t).diff(t), indt)\n",
     "    lap = dxx + dyy + dzz"
