--- a/AcousticFWI/OP.ipynb
+++ b/AcousticFWI/OP.ipynb
@@ -143,10 +143,10 @@
    "outputs": [],
    "source": [
     "# Arithmetic\n",
-    "#                    dxi             dxxi             dxxij        multiplications     additions\n",
-    "AI_acou =        0*AI_dxi    +    3*AI_dxxi   +    0*AI_dxxij    +        2          +     5     \n",
-    "AI_vti  = 2 * (  0*AI_dxi    +    3*AI_dxxi   +    0*AI_dxxij    +        4          +     5  )\n",
-    "AI_tti  = 2 * (  0*AI_dxi    +    3*AI_dxxi   +    3*AI_dxxij    +        44         +     17 )"
+    "#                    dxi             dxxi             dxxij        multiplications     additions   duplicates \n",
+    "AI_acou =        0*AI_dxi    +    3*AI_dxxi   +    0*AI_dxxij    +        3          +     5     -  2 * 2\n",
+    "AI_vti  = 2 * (  0*AI_dxi    +    3*AI_dxxi   +    0*AI_dxxij    +        5          +     5     -  2    )\n",
+    "AI_tti  = 2 * (  0*AI_dxi    +    3*AI_dxxi   +    3*AI_dxxij    +        44         +     17    -  0    )"
    ]
   },
   {
@@ -159,10 +159,10 @@
    "source": [
     "# I/O operations (we load a point once only)\n",
     "#                     dxi              dxxi             dxxij         duplicate   other load/write\n",
-    "IO_acou   =         0*IO_dxi    +    3*IO_dxxi   +    0*IO_dxxij  -     2       +     2\n",
-    "IO_acoum  =         0*IO_dxi    +    3*IO_dxxi   +    0*IO_dxxij  -     2       +     1    +  1 / s\n",
-    "IO_vti    =  2 * (  0*IO_dxi    +    3*IO_dxxi   +    0*IO_dxxij  -     2       +     4      )\n",
-    "IO_tti    =  2 * (  0*IO_dxi    +    3*IO_dxxi   +    3*IO_dxxij  -  3*k +2     +     10     )"
+    "IO_acou   =         0*IO_dxi    +    3*IO_dxxi   +    0*IO_dxxij  -     2       +     3\n",
+    "IO_acoum  =         0*IO_dxi    +    3*IO_dxxi   +    0*IO_dxxij  -     2       +     3    +  1 / s\n",
+    "IO_vti    =  2 * (  0*IO_dxi    +    3*IO_dxxi   +    0*IO_dxxij  -     2       +     2      ) + 3\n",
+    "IO_tti    =  2 * (  0*IO_dxi    +    3*IO_dxxi   +    3*IO_dxxij  -  3*k +2     +     4     )  + 7"
    ]
   },
   {
@@ -176,10 +176,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6*k + 7)/(12*k)\n",
-      "(6*k + 7)/(12*k)\n",
-      "(6*k**2 + 6*k + 73)/(12*(k**2 + 6))\n",
-      "s*(6*k + 7)/(4*(s*(3*k - 1) + 1))\n"
+      "(3*k + 2)/(2*(3*k + 1))\n",
+      "(3*k + 2)/(2*(3*k + 1))\n",
+      "(6*k**2 + 6*k + 73)/(2*(6*k**2 + 31))\n",
+      "s*(3*k + 2)/(2*(s*(3*k + 1) + 1))\n"
      ]
     }
    ],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
